--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: "NiBo's Blog"
-subtitle:
-description: "It's now or never."
+subtitle: "It's now or never."
+description: ""
 author: NiBo
 language: zh-Hans
 timezone:
