config: 注释通过 Git 部署的方式

--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type: git
-  repo: git@github.com:nibocn/nibocn.github.com.git
-  branch: [master]
+# deploy:
+#   type: git
+#   repo: git@github.com:nibocn/nibocn.github.com.git
+#   branch: [master]
