--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@
 title: "NiBo's Blog"
 subtitle: "It's now or never."
 description: ""
+keywords: ""
 author: NiBo
 language: zh-Hans
 timezone:
@@ -42,7 +43,16 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-
+  
+# Home page setting
+# path: Root path for your blogs index page. (default = '')
+# per_page: Posts displayed per page. (0 = disable pagination)
+# order_by: Posts order. (Order by date descending by default)
+index_generator:
+  path: ''
+  per_page: 10
+  order_by: -date
+  
 # Category & Tag
 default_category: uncategorized
 category_map:
