--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: "It's now or never."
 description: ""
 keywords: ""
 author: NiBo
-language: zh-Hans
+language: zh-CN
 timezone:
 
 # URL
@@ -43,7 +43,7 @@ highlight:
   line_number: true
   auto_detect: false
   tab_replace:
-  
+
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
@@ -52,7 +52,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
-  
+
 # Category & Tag
 default_category: uncategorized
 category_map:
