--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: ""
 keywords: ""
 author: NiBo
 language: zh-CN
-timezone:
+timezone: "Asia/Shanghai"
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -93,6 +93,18 @@ theme_config:
     #schedule: /schedule/ || calendar
     #sitemap: /sitemap.xml || sitemap
     #commonweal: /404/ || heartbeat
+  # Post meta display settings
+  post_meta:
+    item_text: true
+    created_at: true
+    updated_at:
+      enabled: true
+      # If true, show updated date label only if `updated date` different from 'created date' (post edited in another day than was created).
+      # And if post will edited in same day as created, edited time will show in popup title under created time label.
+      # If false show anyway, but if post edited in same day, show only edited time.
+      another_day: true
+    categories: true
+
   fancybox: true
 
 # Deployment
