--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 language: node_js
 node_js:
-- 8
+  - "lts/*"
 branches:
-    only:
+  only:
     - master
 before_install:
-- openssl aes-256-cbc -K $encrypted_fcee4a8e5699_key -iv $encrypted_fcee4a8e5699_iv
-  -in .travis/travis.enc -out ~/.ssh/id_rsa -d
-- chmod 600 ~/.ssh/id_rsa
+  - openssl aes-256-cbc -K $encrypted_fcee4a8e5699_key -iv $encrypted_fcee4a8e5699_iv
+    -in .travis/travis.enc -out ~/.ssh/id_rsa -d
+  - chmod 600 ~/.ssh/id_rsa
 install:
-- npm install hexo-cli -g
-- npm install
-- git clone --depth 1 --branch v6.3.0 https://github.com/theme-next/hexo-theme-next.git themes/next
+  - yarn global add hexo-cli
+  - yarn install
+  - git clone --depth 1 --branch v7.0.1 https://github.com/theme-next/hexo-theme-next.git themes/next
 script:
-- hexo clean
-- hexo generate
-- rsync -az -vv --delete -e "ssh -o 'StrictHostKeyChecking no' -p $PORT" public/ travis@$HOST:/var/www/blog2
-- rm -rf ~/.ssh
+  - hexo clean
+  - hexo generate
+  - rsync -az -vv --delete -e "ssh -o 'StrictHostKeyChecking no' -p $PORT" public/ travis@$HOST:/var/www/blog
+  - rm -rf ~/.ssh
