--- a/_config.yml
+++ b/_config.yml
@@ -73,17 +73,30 @@ pagination_dir: page
 
 # Post wordcount display settings
 # Dependencies: https://github.com/theme-next/hexo-symbols-count-time
-symbols_count_time:
-  symbols: true
-  time: false
-  total_symbols: true
-  total_time: false
+# symbols_count_time:
+#   symbols: true
+#   time: false
+#   total_symbols: true
+#   total_time: false
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
 theme_config:
+  favicon:
+    small: /images/favicon.ico
+    medium: /images/favicon.ico
+    apple_touch_icon: /images/favicon.ico
+    safari_pinned_tab: /images/favicon.ico
+  avatar:
+    url: /images/avatar.png
+    # If true, the avatar would be dispalyed in circle.
+    rounded: true
+    # The value of opacity should be choose from 0 to 1 to set the opacity of the avatar.
+    opacity: 0.8
+    # If true, the avatar would be rotated with the cursor.
+    rotated: true
   menu:
     首页: / || home
     #about: /about/ || user
@@ -97,14 +110,27 @@ theme_config:
   post_meta:
     item_text: true
     created_at: true
-    updated_at:
-      enabled: true
-      # If true, show updated date label only if `updated date` different from 'created date' (post edited in another day than was created).
-      # And if post will edited in same day as created, edited time will show in popup title under created time label.
-      # If false show anyway, but if post edited in same day, show only edited time.
-      another_day: true
+    # updated_at:
+    #   enabled: true
+    #   another_day: true
     categories: true
-
+  font:
+    enable: true
+    global:
+      external: true
+      family: 'Noto Sans SC'
+      size:
+    logo:
+      external: true
+      family: Eater
+      size: 36
+    codes:
+      external: true
+      family: 'Roboto Mono'
+      size:
+  sidebar:
+    scrollpercent: true
+  scheme: Gemini
   fancybox: true
 
 # Deployment
