--- a/_config.yml
+++ b/_config.yml
@@ -132,6 +132,10 @@ theme_config:
     scrollpercent: true
   scheme: Gemini
   fancybox: true
+  vendors:
+    _internal: lib
+    fancybox: //cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.6/jquery.fancybox.min.js
+    fancybox_css: //cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
