--- a/_config.yml
+++ b/_config.yml
@@ -132,6 +132,18 @@ theme_config:
     scrollpercent: true
   scheme: Gemini
   fancybox: true
+  # Disqus
+  disqus:
+    enable: true
+    shortname: nibo
+    count: true
+    lazyload: true
+  firestore:
+    enable: true
+    collection: visitors #required, a string collection name to access firestore database
+    apiKey: AIzaSyCPkbwn8R0zcGZ7NRA6zxHt4IzCieLq2vc #required
+    projectId: nibo-blog #required
+    bluebird: false #enable this if you want to include bluebird 3.5.1(core version) Promise polyfill
   vendors:
     _internal: lib
     fancybox: //cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.6/jquery.fancybox.min.js
