--- a/_config.yml
+++ b/_config.yml
@@ -144,6 +144,10 @@ theme_config:
     apiKey: AIzaSyCPkbwn8R0zcGZ7NRA6zxHt4IzCieLq2vc #required
     projectId: nibo-blog #required
     bluebird: false #enable this if you want to include bluebird 3.5.1(core version) Promise polyfill
+  # Google Analytics
+  google_analytics:
+    tracking_id: UA-137344941-1
+    localhost_ignored: true
   vendors:
     _internal: lib
     fancybox: //cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.6/jquery.fancybox.min.js
