refactor(next): 使用 fancybox 替换 mediumzoom

--- a/_config.next.yml
+++ b/_config.next.yml
@@ -33,8 +33,8 @@ post_meta:
   updated_at:
     enable: false
 post_navigation: right
-# fancybox: true
-mediumzoom: true
+fancybox: true
+# mediumzoom: true
 disqus:
   enable: true
   shortname: nibo
